# docs/swagger.yaml
@@ -40,6 +40,36 @@ info:
   title: Blog API
   version: "1.0"
 paths:
+  /post/:
+    post:
+      consumes:
+      - application/json
+      description: Create a new post
+      parameters:
+      - description: Post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/models.Post'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Create a new post
+      tags:
+      - posts
   /post/{id}:
     get:
       consumes:
@@ -69,7 +99,7 @@ paths:
       summary: Get post by ID
       tags:
       - posts
-  /posts:
+  /posts/:
     get:
       consumes:
       - application/json
